--- a/SoftwareUpdateVM.html
+++ b/SoftwareUpdateVM.html
@@ -2,16 +2,23 @@
 <h2 id="HowTemplateVMworksinQubes">How Template VM works in Qubes</h2>
 <p>Most of the AppVMs (domains) are based on a <em>template VM</em>, which means that their root filesystem (i.e. all the programs and system files) is based on the root filesystem of the corresponding template VM. This dramatically saves disk space, because each new AppVM needs disk space only for storing the user's files (i.e. the home directory). Of course the AppVM has only read-access to the template's filesystem -- it cannot modify it in any way.</p>
 <p>In addition to saving on the disk space, and reducing domain creation time, another advantage of such scheme is the possibility for centralized software update. It's just enough to do the update in the template VM, and then all the AppVMs based on this template get updates automatically after they are restarted.</p>
-<p>The default template is called <strong>fedora-14-x64</strong> in Qubes R1 and <strong>fedora-17-x64</strong> in Qubes R2 Beta1.</p>
+<p>The default template is called <strong>fedora-14-x64</strong> in Qubes R1 and <strong>fedora-18-x64</strong> in Qubes R2 Beta2.</p>
 <h2 id="InstallingorupdatingsoftwareinthetemplateVM">Installing (or updating) software in the template VM</h2>
-<p>In order to permanently install new software, you should start the template VM and then start either console or dedicated software management application, such as gpk-application (Start-&gt;Applications-&gt;Template: fedora-14-x64-&gt;<a href="/wiki/wiki/Add/Remove">Add/Remove?</a> software&quot;.</p>
-<p>Install/update software as usual (e.g. using yum, or the dedicated GUI application). Then, shutdown the template VM.</p>
-<p>You will see now that all the AppVMs based on this template (by default all your VMs) will be marked as &quot;outdated&quot; in the manager. This is because their fielsystem has not been yet updated -- in order to do that, you must restart each VM. You don't need to restart all of them at the same time -- e.g. if you just need the newly installed software to be available in your 'personal' domain, then restart only this VM. You will restart others whenever this will be convenient to you.</p>
-<h2 id="NotesontrustingyourTemplateVMs">Notes on trusting your Template VM(s)</h2>
-<p>As the template VM is used for creating filesystems for other AppVMs, where you actually do the work, it means that the template VM is as trusted as the most trusted AppVM based on this template. In other words, if your template VM gets compromised, e.g. because you installed a application, whose <em>installer's scripts</em> were malicious, then <em>all</em> your AppVMs (based on this template) will inherit this compromise.</p>
-<p>There are several ways to deal wit this problem:</p>
+<p>In order to permanently install new software, you should:</p>
 <ul>
-<li>Only install packages from trusted sources -- e.g. from the pre-configured Fedora repositories. All those packages are signed by Fedora, and as we expect that at least the package's installation scripts are not malicious. This is enforced by default, by not allowing any networking connectivity in the default template VM, except for access to the Fedora repos.</li>
+<li>Start the template VM and then start either console (e.g. <code>gnome-terminal</code>) or dedicated software management application, such as <code>gpk-application</code> (<em>Start-&gt;Applications-&gt;Template: fedora-XX-x64-&gt;Add/Remove software</em>),</li>
+</ul>
+<ul>
+<li>Install/update software as usual (e.g. using yum, or the dedicated GUI application). Then, shutdown the template VM,</li>
+</ul>
+<ul>
+<li>You will see now that all the AppVMs based on this template (by default all your VMs) will be marked as &quot;outdated&quot; in the manager. This is because their fielsystems have not been yet updated -- in order to do that, you must restart each VM. You don't need to restart all of them at the same time -- e.g. if you just need the newly installed software to be available in your 'personal' domain, then restart only this VM. You will restart others whenever this will be convenient to you.</li>
+</ul>
+<h2 id="NotesontrustingyourTemplateVMs">Notes on trusting your Template VM(s)</h2>
+<p>As the template VM is used for creating filesystems for other AppVMs, where you actually do the work, it means that the template VM is as trusted as the most trusted AppVM based on this template. In other words, if your template VM gets compromised, e.g. because you installed an application, whose <em>installer's scripts</em> were malicious, then <em>all</em> your AppVMs (based on this template) will inherit this compromise.</p>
+<p>There are several ways to deal with this problem:</p>
+<ul>
+<li>Only install packages from trusted sources -- e.g. from the pre-configured Fedora repositories. All those packages are signed by Fedora, and as we expect that at least the package's installation scripts are not malicious. This is enforced by default (at the <a href="/wiki/wiki/QubesFirewall">firewall VM level</a>), by not allowing any networking connectivity in the default template VM, except for access to the Fedora repos.</li>
 </ul>
 <ul>
 <li>Use <em>standalone VMs</em> (see below) for installation of untrusted software packages.</li>
@@ -31,17 +38,20 @@
 <ul>
 <li>So, are the template VMs as trusted as Dom0?</li>
 </ul>
-<p>Not quite. Dom0 compromise is absolutely fatal and it is a Game Over. However, a compromise of a template affects only a subset of all your AppVMs (in case you use more than one template, or also some standalone VMs). Also, if your AppVMs are network disconnected, eve though their filesystem might got compromise due to the corresponding template compromise, it still would be difficult for the attacker to actually send out the data stolen in the AppVM. Not impossible (due to existence of cover channels between VMs on x86 architecture), but difficult and slow.</p>
+<p>Not quite. Dom0 compromise is absolutely fatal, and it leads to Game Over (TM). However, a compromise of a template affects only a subset of all your AppVMs (in case you use more than one template, or also some standalone VMs). Also, if your AppVMs are network disconnected, even though their filesystems might got compromised due to the corresponding template compromise, it still would be difficult for the attacker to actually leak out the data stolen in an AppVM. Not impossible (due to existence of cover channels between VMs on x86 architecture), but difficult and slow.</p>
 <h2 id="StandaloneVMs">Standalone VMs</h2>
 <p>Standalone VMs have their own copy of the whole filesystem, and thus can be updated and managed on its own. But this means that they take a few GBs on disk, and also that centralized updates do not apply to them.</p>
 <p>Sometime it might be convenient to have a VM that has its own filesystem, where you can directly introduce changes, without the need to start/stop the template VM. Such situations include e.g.:</p>
 <ul>
 <li>VMs used for development (devel environments requires a lot of *-devel packages and specific devel tools)</li>
-<li>VMs used for installing untrusted packages. Normally you install digitally signed software from Red <a href="/wiki/wiki/Hat/Fedora">Hat/Fedora?</a> repositories, and it's reasonable that such software has non malicious <em>installation</em> scripts (rpm pre/post scripts). However, when you would like to install some packages form less trusted sources, or unsigned, then using a dedicated (untrusted) standalone VM might be a better way.</li>
 </ul>
-<p>In order to create a standalone VM you must currently use command line (from console in Dom0):</p>
+<ul>
+<li>VMs used for installing untrusted packages. Normally you install digitally signed software from Red Hat/Fedora repositories, and it's reasonable that such software has non malicious <em>installation</em> scripts (rpm pre/post scripts). However, when you would like to install some packages form less trusted sources, or unsigned, then using a dedicated (untrusted) standalone VM might be a better way.</li>
+</ul>
+<p>In order to create a standalone VM you can use a command line like this (from console in Dom0):</p>
 <pre class="wiki"><code>qvm-create &lt;vmname&gt; --standalone --label &lt;label&gt;</code></pre>
+<p>... or click appropriate options in the Qubes Manager's Create VM window.</p>
 <h2 id="Usingmorethanonetemplate">Using more than one template</h2>
-<p>It's also possible to have more than one template VM in the system. E.g. one could clone the default template using the <code></code><code>qvm-clone-template</code><code></code> command in Dom0. This allows to have a customized template, e.g. with devel packages, or less trusted apps, shared by some subset of domains.</p>
-<p>When you create a new domain you can choose which template this VM should be based on. If you use command line, you should use the <code></code><code>--template</code>` switch:</p>
+<p>It's also possible to have more than one template VM in the system. E.g. one could clone the default template using the <code>qvm-clone-template</code> command in Dom0. This allows to have a customized template, e.g. with devel packages, or less trusted apps, shared by some subset of domains.</p>
+<p>When you create a new domain you can choose which template this VM should be based on. If you use command line, you should use the <code>--template</code> switch:</p>
 <pre class="wiki"><code>qvm-create &lt;vmname&gt; --template &lt;templatename&gt; --label &lt;label&gt;</code></pre>
