--- a/HCL.html
+++ b/HCL.html
@@ -21,7 +21,7 @@
 <h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
-<p>Qubes R2 Beta1</p>
+<p>Qubes R2 Beta2</p>
 <p><strong>Reported by</strong></p>
 <p>Standard feautures</p>
 <p>VT-d</p>
@@ -36,12 +36,8 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
 <p>Qubes core developers</p>
-<p>Lenovo Thinkpad T420s</p>
+<p>Lenovo Thinkpad T420s<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
@@ -49,21 +45,14 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
+<p>Requires kernel 3.2.30 to support S3 sleep (the default kernel S3 sleep causes system reboot)</p>
 <p>Qubes core developers</p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
 <p>OK</p>
 <p>X</p>
 <p>?</p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
-<p>?</p>
 <p>Qubes core developers</p>
 <p>Samsung X460</p>
-<p>OK</p>
-<p>X</p>
-<p>?</p>
-<p>OK</p>
 <p>OK</p>
 <p>X</p>
 <p>?</p>
@@ -84,134 +73,53 @@
 <p>OK</p>
 <p>?</p>
 <p>needs kernel 3.4.17+</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
-<p>needs kernel 3.4.17+</p>
 <p>Qubes core developers</p>
 <p>ASUS UX-31</p>
 <p>*</p>
 <p>?</p>
 <p>?</p>
-<p>*</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​Steven Collins</a></p>
 <p>Dell PowerEdge T110 II <br /> (onboard Matrox; Xeon E3-1230)</p>
 <p>OK</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/8a894915909eeaee">​Geoff</a></p>
 <p>Dell Precision M4600 <br /> (i7-2860QM; NVIDIA Quadro 1000M)</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></p>
 <p>Dell XPS 13<br /> (i5; intel HD; sandy bridge; BIOS A03)</p>
 <p>OK</p>
 <p>?</p>
 <p>?</p>
-<p>OK</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p>HP Pavilion Sleekbook 14-B030TU<br /> (i5-3317U; BIOS F.06)</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/ZC_SQJhXVOM/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
-<p>Lenovo Thinkpad T430<br /> (i5-3320)</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/S_VG_jgtpBo/VngCPK2W5FcJ">​Tunguuz</a></p>
-<p>Lenovo Thinkpad T430s<br /> (i5-3320M; HD4000; QM77; BIOS 2.05)</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/Z9seyOT46Ro/wX6tsrxE84sJ">​cprise</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
-<p>Lenovo Thinkpad X61t</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>OK</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/4IrF1A6sa3U/QIQe-dNc4tEJ">​George Walker</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></p>
 <p>Lenovo Thinkpad x230</p>
@@ -219,45 +127,24 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a></p>
 <p>Toshiba Tecra S11</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​Jan Beerden</a></p>
 <p>Toshiba Tecra A11-15X <br /> (i7-M620)</p>
 <p>OK</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/c0d5f6a33d672b62">​PirBoazo</a></p>
 <p>Toshiba M780 S7240 <br /> (BIOS latest)</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></p>
 <p>Samsung Series 7 Chronos NP700Z5C<br /> (nVidia Optimus; i7-3635QM; BIOS P04ABJ)</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​read more</a></p>
-<p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
@@ -268,10 +155,6 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​read more</a></p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
 <p>If you want to submit any new results please send a mail to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
