--- a/HCL.html
+++ b/HCL.html
@@ -79,6 +79,16 @@
 <p>OK</p>
 <p>Suspend doesn't work on 3.7.6 kernel, but work on 3.7.4</p>
 <p>Qubes core developers</p>
+<p>Apple MacBookPro<br /> (i7 M620)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>X</p>
+<p>OK</p>
+<p>X</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
 <p>ASUS UX-31</p>
 <p>*</p>
 <p>?</p>
@@ -180,13 +190,18 @@
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
+<p>GA-fxa990-ud3 (rev 3.0)<br /> (AMD FX-8350; GTX 470)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/oox94EsIduQ/7w4xUoK5pxwJ">m astroj</a></p>
 <h2 id="Submittingnewresults">Submitting new results</h2>
-<p>If you want to submit any new results please send a mail to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
+<p>If you want to submit any new data please run 'qubes-hcl-report' script (in dom0) and send the results to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
 <ul>
 <li>Subject: HCL - &lt;your machine model name&gt;</li>
-<li>VGA</li>
-<li>CPU</li>
-<li>Chipset</li>
-<li>BIOS version</li>
 </ul>
-<p>And of course include any information about the mentioned Qubes features.</p>
+<p>And of course include any useful information about the mentioned Qubes features.</p>
