--- a/UpgradeToR2rc1.html
+++ b/UpgradeToR2rc1.html
@@ -3,7 +3,7 @@
 <p><strong>Before attempting either an in-place upgrade or a clean installation, we strongly recommend that users back up the system by using the built-in <a href="/wiki/wiki/BackupRestore">backup tool</a>.</strong></p>
 <h2 id="UpgradeTemplateandStandaloneVMs">Upgrade Template and Standalone VM(s)</h2>
 <ul>
-<li>Qubes R2 rc1 comes with new template based on Fedora 20. You can upgrade existing template according to procedure described <a href="/wiki/wiki/FedoraTemplateUpgrade">here</a>. (<strong>Note to qubes-testers</strong>: please enable <code>qubes-vm-r2b3-current-testing</code> for the template upgrade)</li>
+<li>Qubes R2 rc1 comes with new template based on Fedora 20. You can upgrade existing template according to procedure described <a href="/wiki/wiki/FedoraTemplateUpgrade">here</a>.</li>
 </ul>
 <ul>
 <li><strong>It also possible to download a new Fedora 20-based template from our repositories</strong>. To do this please first upgrade the Dom0 distro as described in the section below.</li>
@@ -19,13 +19,11 @@
 <li><p>Install all the updates for Dom0:</p>
 <pre class="wiki"><code>sudo qubes-dom0-update</code></pre></li>
 </ol>
-<p><strong>NOTE to qubes-testers</strong>: for the time being please use the current-testing repo for this step:</p>
-<pre class="wiki"><code>sudo qubes-dom0-update --enablerepo=qubes-dom0-r2b3-current-testing</code></pre>
 <p>After this step you should have <code>qubes-release-2-5</code> in your Dom0. Important: if you happen to have <code>qubes-release-2-6*</code> then you should downgrade to <code>qubes-release-2-5</code>! The <code>qubes-release-2-6*</code> packages have been uploaded to the testing repos and were kept there for a few hours, until we realized they bring incorrect repo definitions and so we removed them and also have changed the update procedure a bit (simplifying it).</p>
 <ol start="3">
 <li>Upgrade dom0 to R2 rc1:</li>
 </ol>
-<p>Note: be sure that the VM used as a update-downloading-vm (by default its the firewallvm based on the default template) has been updated to the latest qubes packages, specifically <code>qubes-core-vm-2.1.31</code> or later. This doesn't imply that the VM must already be upgraded to fc20 -- for Dom0 upgrade we could still use an fc18-based VM (updatevm) it is only important to install the latest Qubes packages there. (<strong>Note to qubes-testers</strong>: please enable <code>qubes-vm-r2b3-current-testing</code> for the template upgrade)</p>
+<p>Note: be sure that the VM used as a update-downloading-vm (by default its the firewallvm based on the default template) has been updated to the latest qubes packages, specifically <code>qubes-core-vm-2.1.31</code> or later. This doesn't imply that the VM must already be upgraded to fc20 -- for Dom0 upgrade we could still use an fc18-based VM (updatevm) it is only important to install the latest Qubes packages there.</p>
 <pre class="wiki"><code>sudo qubes-dom0-update qubes-dom0-dist-upgrade
 sudo qubes-dom0-update</code></pre>
 <ol start="4">
