--- a/InstallationGuideR2rc1.html
+++ b/InstallationGuideR2rc1.html
@@ -46,7 +46,7 @@
 <li>If you're GPU is not correctly supported by the Dom0 kernel (e.g. the 3D desktop effects do not run smoothly) then you might experience &quot;heaviness&quot; with Windows 7-based AppVMs. In that case, please solve the problem with your GPU support in Dom0 in the first place (by using a different kernel), or install Qubes OS on a different system.</li>
 </ul>
 <ul>
-<li>HVMs with Qubes Tools installed will not have access to the network if firewallvm uses 3.12 kernel (the default). The workaround is to set older (3.11) kernel for firewallvm (for example using Qubes Manager - advanced tab of VM settings).</li>
+<li>HVMs with Qubes Tools installed will not have access to the network if firewallvm uses 3.12 kernel (the default). The workaround is to use older (3.11) kernel for firewallvm. You need to <a href="http://wiki.qubes-os.org/trac/wiki/SoftwareUpdateDom0#Howtodowngradeaspecificpackage">install kernel-qubes-vm-3.11.10 package</a>, then ensure that it is used for firewallvm (for example using Qubes Manager - advanced tab of VM settings).</li>
 </ul>
 <ul>
 <li>Just after installation, applications menu will not contain colorful application icons (new feature), only padlock in VM color. To get colorful icons, you need to start template VM (fedora-20-x64) and call <code>qvm-sync-appmenus fedora-20-x64</code> in dom0 terminal. If you have other Template VMs or Standalone VMs, repeat the steps for them too.</li>
